reset document margin and padding

--- a/styles/_print.css
+++ b/styles/_print.css
@@ -7,6 +7,11 @@
    ========================================================================== */
 
 @media print {
+  body {
+    margin: 0 !important;
+    padding: 0 !important;
+  }
+
   a,
   a:visited {
     text-decoration: underline;
