replace deprecated properties

--- a/styles/_print.css
+++ b/styles/_print.css
@@ -41,12 +41,12 @@
   pre,
   blockquote {
     border: 1px solid #999;
-    page-break-inside: avoid;
+    break-inside: avoid-page;
   }
 
   tr,
   img {
-    page-break-inside: avoid;
+    break-inside: avoid-page;
   }
 
   p,
@@ -58,6 +58,6 @@
 
   h2,
   h3 {
-    page-break-after: avoid;
+    break-after: avoid-page;
   }
 }
