reset width when printing

--- a/styles/first.css
+++ b/styles/first.css
@@ -124,3 +124,9 @@ section#projects .name {
 section#education #university-degree {
   font-weight: 600;
 }
+
+@media print {
+  #resume {
+    width: 100%;
+  }
+}
