seems like avoid-page is not yet fully supported by chrome

--- a/styles/_print.css
+++ b/styles/_print.css
@@ -42,11 +42,13 @@
   blockquote {
     border: 1px solid #999;
     break-inside: avoid-page;
+    page-break-inside: avoid;
   }
 
   tr,
   img {
     break-inside: avoid-page;
+    page-break-inside: avoid;
   }
 
   p,
@@ -59,10 +61,12 @@
   h2,
   h3 {
     break-after: avoid-page;
+    page-break-after: avoid;
   }
 
   div {
     break-inside: avoid-page;
+    page-break-inside: avoid;
   }
 
   @page {
