some refactoring to make the html template more generic to work with multiple styles

--- a/styles/_init.css
+++ b/styles/_init.css
@@ -8,10 +8,13 @@ body {
   margin: auto;
 }
 
-#skills p,
-#work p,
+#resume div,
+#contact div,
+#skills div,
+#work div,
 #work ul,
-#education p {
+#projects div,
+#education div {
   margin: 0;
 }
 
