--- a/styles/_print.css
+++ b/styles/_print.css
@@ -10,6 +10,8 @@
   body {
     margin: 0 !important;
     padding: 0 !important;
+    color-adjust: exact;
+    -webkit-print-color-adjust: exact;
   }
 
   a,
