--- a/styles/_base.css
+++ b/styles/_base.css
@@ -1,29 +1,31 @@
-/* main.css 2.1.0 | MIT License | https://github.com/h5bp/main.css#readme */
-/* ==========================================================================
-   Base styles: opinionated defaults
-   ========================================================================== */
+/* Based on main.css 2.1.0 | MIT License | https://github.com/h5bp/main.css#readme */
+
+html,
+body {
+  padding: 0;
+  margin: 0;
+}
 
 html {
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   color: #222;
   font-size: 1em;
   line-height: 1.4;
 }
 
-/*
- * Remove text-shadow in selection highlight:
- * https://twitter.com/miketaylr/status/12228805301
- *
- * Customize the background color to match your design.
- */
+a {
+  color: inherit;
+  text-decoration: none;
+}
 
+* {
+  box-sizing: border-box;
+}
 ::selection {
   background: #b3d4fc;
   text-shadow: none;
 }
-
-/*
- * A better looking default horizontal rule
- */
 
 hr {
   display: block;
@@ -34,34 +36,16 @@ hr {
   padding: 0;
 }
 
-/*
- * Remove the gap between audio, canvas, iframes,
- * images, videos and the bottom of their containers:
- * https://github.com/h5bp/html5-boilerplate/issues/440
- */
-
-audio,
-canvas,
-iframe,
 img,
-svg,
-video {
+svg {
   vertical-align: middle;
 }
-
-/*
- * Remove default fieldset styles.
- */
 
 fieldset {
   border: 0;
   margin: 0;
   padding: 0;
 }
-
-/*
- * Allow only vertical resizing of textareas.
- */
 
 textarea {
   resize: vertical;
